--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="Conectar Restaurant Website">
     <meta property="og:title" content="Conectar Restaurant Website">
     <meta property="og:description" content="Conectar Restaurant Website">
-    <title>Conectar Restaurant</title>
+    <title>Conectar Restaurant Tablet Version</title>
     <link rel="stylesheet" href="styles.css">
 <script src="script.js" defer></script> 
 <body>
